<resources>
    <string name="app_name">StoreIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="background">background</string>
    <string name="storeit">StoreIT</string>
    <string name="your_it_store">your IT store.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_title">Sign In</string>
    <string name="enter">Enter</string>
    <string name="register_button">Register</string>
    <string name="favourite_products">Favourite Products</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="settings_titulo">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="logout_button">Logout</string>
    <string name="logout_nav">Logout</string>
    <string name="category">Category</string>
    <string name="category_title">Category android:textStyle=</string>
    <string name="view_all">View All</string>
    <string name="categorias">Categorias</string>
    <string name="all_products">All Products</string>
    <string name="view_all_2">View All</string>
    <string name="error">Error</string>
    <string name="mouses">Mouses</string>
    <string name="search_your_device">Search your device</string>
    <string name="produto">Produto</string>
    <string name="product_name">Product</string>
    <string name="product_price">Price</string>
    <string name="plus">+</string>
    <string name="buy_now">Buy now</string>
    <string name="teste">Teste</string>
    <string name="teste_title">teste</string>
</resources>