<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <Button
        android:id="@+id/enter_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="mainActivity"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textColor="#004E8C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/ico"
        android:layout_width="134dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/it"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/storeit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.351"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/login_email"
        android:layout_width="282dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/email_clipart"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="282dp"
        android:layout_height="42dp"
        android:layout_marginBottom="236dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/security_icon"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/register_button"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintStart_toEndOf="@+id/background"
        tools:ignore="MissingConstraints"
        android:onClick="Register"/>


</androidx.constraintlayout.widget.ConstraintLayout>